minor fix on safari

--- a/style.css
+++ b/style.css
@@ -40,6 +40,8 @@ html, body, div, p {
     bottom: 0;
     width: 300px;
     display: flex;
+    display: -webkit-flex;
+    -webkit-flex-direction: column;
     flex-direction: column;
 }
 
@@ -143,6 +145,7 @@ input, button {
 
 .settings {
     display: flex;
+    display: -webkit-flex;
     justify-content: space-between;
     padding-top: 20px;
 }
